--- a/Report.Rmd
+++ b/Report.Rmd
@@ -45,7 +45,7 @@ knit_hooks$set(output = function(x, options) {
 p1 <- plot_acc(data = params$data, use_h2o = params$use_h2o, alg = params$alg)
 
 p2 <- plot_var_imp(data = params$data, sample = params$sample,
-                   alg = params$alg, use_h2o = params$use_h2o)[[1]]
+                   alg = params$alg, use_h2o = params$use_h2o)
 
 gridExtra::grid.arrange(p1, p2, ncol = 1)
 ```
